css/main.css
@charset "UTF-8";

/*---------------------------------------------------------------------------*/
/*	Reset
/*---------------------------------------------------------------------------*/

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1em;
}
ol, ul {
	list-style: none;	
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*---------------------------------------------------------------------------*/
/*	Vars
/*---------------------------------------------------------------------------*/

:root{
	--color-bg: #000;
	--color-header-bg: #2d5834;
	--color-text: #fff;
	--color-popup-bg: #0000003d;
	--color-popup-header: #0000;
	--color-popup-header-active: #0006;
	--color-popup-border: #3e3e3e;
	--color-selection-active: #54dd6b;
	--color-selection: #aaa;

	--inner-width: 960px;
}

/*---------------------------------------------------------------------------*/
/*	title-section
/*---------------------------------------------------------------------------*/

.title-section {
	background-color: var(--color-header-bg);
	width: 100%;
	overflow: hidden;
}
.title-section__inner {
	width: var(--inner-width);
	margin: auto;
	padding: 20px 0px 25px 0px;
}
.title-section__title {
	font-weight: bold;
	font-size: 1.5em;
	display: inline-block;
	margin-bottom: 20px;
	color: white;
	text-decoration: none;
}
.title-section__config {
	display: block;
	background-color: #000;
	border: none;
	border-radius: 5px;
	width: 100%;
	height: 416px;
	font-size: 1em;
	line-height: 1.3em;
	resize: none;
	overflow-y: hidden;
}
.title-section__hotkeys {
	width: 50%;
	columns: 2;
	-webkit-columns: 2;
	-moz-columns: 2;
}
.title-section h1 {
	font-weight: bold;
}

/*---------------------------------------------------------------------------*/
/*	video-section
/*---------------------------------------------------------------------------*/

.video-section {
	position: relative;
	overflow: hidden;
}
.video-section__player {
	display: block;
	width: 100%;
	height: 100vh;
}
.video-section__custom-player {
	display: block;
	width: 100%;
	height: 100vh;
}
.overlay-text {
	position: absolute;
	transform: translate(-50%, -50%);
	z-index: 9;
	top: 50%;
	left: 50%;
	font-size: 3em;
	font-weight: bold;
}
.overlay-bg {
	z-index: 8;
	background-color: black;
	position: absolute;
	top: 0%;
	bottom: 0%;
	left: 0%;
	right: 0%;
}

/*---------------------------------------------------------------------------*/
/*	squad
/*---------------------------------------------------------------------------*/

.squad {
	top: 100px;
	left: 30px;
}
.squad__list {
	padding: 10px 40px 10px 40px;
	list-style: symbols;
}
.squad__item {
	color: inherit;	
}
.squad__item--selected { 
	color: var(--color-selection);
	font-weight: bold;
}
.body-focused .squad__item--selected {
	color: var(--color-selection-active);
}

/*---------------------------------------------------------------------------*/
/*	databox
/*---------------------------------------------------------------------------*/

.databox {
	top: 400px;
	left: 30px;
	font-size: 1em;
}
.databox__textarea {
	border: none;
	margin: 0;
	background: none;
	width: 300px;
	height: 400px;
}

/*---------------------------------------------------------------------------*/
/*	draggable
/*---------------------------------------------------------------------------*/

.draggable {
	position: absolute;
	z-index: 9;
	background: var(--color-popup-bg);
	border: 1px solid var(--color-popup-border);
	border-radius: 5px;
}
.draggable__handle {
	padding: 5px;
	cursor: move;
	z-index: 10;
	background-color: var(--color-popup-header);
	border-bottom: 1px solid var(--color-popup-border);
}
.body-focused .draggable__handle {
	background-color: var(--color-popup-header-active);
}

/*---------------------------------------------------------------------------*/
/*	Misc
/*---------------------------------------------------------------------------*/

html {
	background-color: var(--color-bg);
	color: var(--color-text);
	font-family: "Segoe UI", Helvetica, sans-serif;
}
body {
	line-height: 1.3em;
}
textarea {
	color: var(--color-text);
	font-family: "Segoe UI", Helvetica, sans-serif;
	padding: 10px;
	border: none;
}
a.button {
	-webkit-appearance: button;
	-moz-appearance: button;
	appearance: button;
	/* text-decoration: none;
	color: initial; */
}
.github-link {
	width: 18px;	
	height: 18px;	
}
html {
	-ms-overflow-style: none;  /* Internet Explorer 10+ */
	scrollbar-width: none;  /* Firefox */
}
html::-webkit-scrollbar { 
	display: none;  /* Safari and Chrome */
}
.hidden {
	display: none;
}

